dist/docs/3.1.21/snippets/compliance-storyboard-inventory.mdx
---
title: Universal Compliance Storyboards
description: "Graded universal compliance storyboards that every AdCP agent runs, including each scenario's purpose and canonical YAML source."
"og:title": "AdCP — Universal Compliance Storyboards"
---

{/*
  This file is generated by scripts/generate-compliance-snippets.mjs.
  Do not edit it by hand. Regenerate with `npm run build:compliance`.
  Sources: dist/compliance/latest/index.json, dist/compliance/latest/universal/*.yaml
*/}

| Graded storyboard | Purpose | Source |
|-------------------|---------|--------|
| `account-identity-reconciliation` | Validates revision-guarded operator identity rekeying, collision safety, and former-key redirects for sellers that advertise identity updates. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/account-identity-reconciliation.yaml) |
| `agent-notification-configs` | Validates the 3.2 agent-level capabilities.changed registration surface: advertised revision fencing, NO_AUTH rejection, and dry-run clear semantics. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/agent-notification-configs.yaml) |
| `billing-gate-dispatch` | Validates that account.supported_billing is declared and honored by sync_accounts, including out-of-set BILLING_NOT_SUPPORTED rejection, recovery-value consistency, and the distinct per-buyer-agent BILLING_NOT_PERMITTED_FOR_AGENT gate. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/billing-gate-dispatch.yaml) |
| `canonical-format-validate-input` | Validates 3.1 canonical-format dry-run semantics: structural pass/fail across canonical slots and unvalidatable_nondeterministic for seeded products. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/canonical-format-validate-input.yaml) |
| `capability-discovery` | Buyer calls get_adcp_capabilities to discover what an agent supports before making any buying or creative decisions. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/capability-discovery.yaml) |
| `collection-lists-pagination-integrity` | Validates the cursor↔has_more invariant by walking a paginated list_collection_lists response from a continuation page to a terminal page. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/collection-lists-pagination-integrity.yaml) |
| `comply-controller-mode-gate` | Verifies that a seller exposing comply_test_controller refuses calls from live-mode (non-sandbox) accounts with FORBIDDEN. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/comply-controller-mode-gate.yaml) |
| `content-standards-pagination-integrity` | Validates the cursor↔has_more invariant by walking a paginated list_content_standards response from a continuation page to a terminal page. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/content-standards-pagination-integrity.yaml) |
| `ctv-experience-validate-input` | Validates AdCP 3.2 ctv_ad_experience matrix pairings, duration/interactivity constraint profiles, the menu focus/video pairing, and non-blocking activation-copy warnings via validate_input against seeded CTV products. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/ctv-experience-validate-input.yaml) |
| `deterministic-testing` | Uses comply_test_controller to force state transitions and simulate delivery/budget, verifying state machines and reporting. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/deterministic-testing.yaml) |
| `error-compliance` | Validates that agents return properly structured AdCP errors with correct codes, recovery hints, and transport bindings. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/error-compliance.yaml) |
| `error-compliance-signals` | Validates that signals agents return properly structured AdCP errors with correct codes, recovery hints, and transport bindings. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/error-compliance-signals.yaml) |
| `get-media-buys-pagination-integrity` | Validates that get_media_buys responses carry a well-formed pagination envelope honoring the cursor↔has_more invariant. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/get-media-buys-pagination-integrity.yaml) |
| `get-products-pagination-integrity` | Validates get_products wholesale-mode pagination by walking a seeded product feed from continuation to terminal, while documenting that brief/refine pagination caps returned products in curated results. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/get-products-pagination-integrity.yaml) |
| `get-signals-pagination-integrity` | Validates the cursor↔has_more invariant on a paginated get_signals response by walking from a continuation page to the next page under a broad query. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/get-signals-pagination-integrity.yaml) |
| `idempotency` | Validates that mutating requests enforce idempotency_key — replays return cached responses, key reuse with a different payload returns IDEMPOTENCY_CONFLICT, fresh keys create new resources, and concurrent retries with the same key produce exactly one resource (first-insert-wins under rule 9). | [YAML](https://adcontextprotocol.org/compliance/latest/universal/idempotency.yaml) |
| `notification-config-event-scope` | Validates that sync_accounts.accounts[].notification_configs[] rejects media-buy-anchored notification types. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/notification-config-event-scope.yaml) |
| `notification-config-lifecycle` | Validates account-level notification_configs[] lifecycle behavior on sync_accounts: paused registration, durable echo, subscriber-keyed replacement, and clear. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/notification-config-lifecycle.yaml) |
| `notification-config-rejections` | Validates account-level notification_configs[] semantic rejection for duplicate subscriber keys. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/notification-config-rejections.yaml) |
| `oauth-setup` | Capability-gated evaluation of an agent's RFC 9728 protected-resource metadata and the complete RFC 8414 authorization-server graph it advertises. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/oauth-setup.yaml) |
| `pagination-integrity` | Validates the cursor↔has_more invariant by walking a paginated list_creatives response from a continuation page to a terminal page. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/pagination-integrity.yaml) |
| `pagination-integrity-creative-formats` | When an agent still exposes deprecated list_creative_formats compatibility, validates its cursor↔has_more invariant by seeding two formats and walking pages with max_results=1. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/pagination-integrity-creative-formats.yaml) |
| `pagination-integrity-list-accounts` | Validates list_accounts pagination by seeding sandbox accounts, requesting a small first page, and following its cursor once. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/pagination-integrity-list-accounts.yaml) |
| `premium-display-canonical-validation` | Validates AdCP 3.2 seller_rendered_stateful_display supply-mode contracts (components, rendered_canvases, layered_source), single-state reveal shape, policy floors, and coordinated_placements sequence/serving_policy, alongside transition/canvas coverage and shared-slot resolution. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/premium-display-canonical-validation.yaml) |
| `principal` | Validates the experimental stable-principal-scoped configuration surface: capability discovery, pre-configuration identity readback, NO_AUTH rejection, dry-run setup, applied lifecycle with readback, idempotent replay, and section clearing. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/principal.yaml) |
| `property-lists-pagination-integrity` | Validates the cursor↔has_more invariant by walking a paginated list_property_lists response from a continuation page to a terminal page. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/property-lists-pagination-integrity.yaml) |
| `read-tool-idempotency` | Validates that read-only AdCP tasks and the 3.x get_products compatibility facade tolerate an optional idempotency_key without claiming read-response replay. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/read-tool-idempotency.yaml) |
| `reliable-reporting-managed-delivery` | Validates the Managed Delivery tier's explicit capability, atomic managed offering, resource retention, and authorization-revocation contract. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/reliable-reporting-managed-delivery.yaml) |
| `reliable-reporting-reconciled-billing` | Validates the Reconciled Billing tier's canonical evidence and authenticated receipt path for official revisions and later adjustments. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/reliable-reporting-reconciled-billing.yaml) |
| `reporting-core` | Validates reporting.core obligation-before-report behavior, clock-derived health, and explicit zero-row reporting. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/reporting-core.yaml) |
| `reporting-core-declaration` | Validates the proper-name Reliable Reporting 1.0 declaration and its required Core tier without requiring optional tiers or a sandbox controller. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/reporting-core-declaration.yaml) |
| `schema-validation` | Validates that agent responses conform to AdCP schemas and that temporal constraints are enforced. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/schema-validation.yaml) |
| `schema-validation-signals` | Validates that signals agent responses conform to AdCP schemas with all required fields present and correctly typed. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/schema-validation-signals.yaml) |
| `security` | Every AdCP agent MUST require authentication on protected operations. At least one of static credentials or OAuth MUST be implemented and correctly advertised. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/security.yaml) |
| `signed-requests` | Agent verifies RFC 9421 HTTP Signatures on incoming AdCP requests per the 3.1-compatible transport-layer profile. Universal capability-gated storyboard — runs for any agent advertising <code>{"request_signing.supported: true"}</code> regardless of <code>{"supported_protocols"}</code>. Graded against the legacy wire suite covering every 3.1 checklist step and canonicalization-edge rule. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/signed-requests.yaml) |
| `stale-response-advisory` | Validates that STALE_RESPONSE rides in errors[] on a populated success response with transport success preserved, and that STALE_RESPONSE is absent on healthy upstream responses. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/stale-response-advisory.yaml) |
| `trusted-match-publisher-authentication` | Verifies that a TMP router deployment rejects schema-valid Context Match and Identity Match requests with absent or invalid publisher authentication using HTTP 401 and a WWW-Authenticate challenge. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/trusted-match-publisher-authentication.yaml) |
| `v3-envelope-integrity` | v3 protocol envelopes MUST NOT carry task_status or response_status — v2 legacy field names that have no semantics in v3. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/v3-envelope-integrity.yaml) |
| `version-negotiation` | Sellers advertise supported releases on capabilities and echo the served release on every response. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/version-negotiation.yaml) |
| `webhook-emission` | Any agent that emits webhooks MUST echo the caller-supplied operation_id in every payload, carry a stable idempotency_key across retries, avoid duplicate webhook side effects on request replay, and — when the buyer has not opted into the deprecated HMAC fallback — MUST sign deliveries under the RFC 9421 webhook profile. Sellers MUST NOT emit task webhooks for inline terminal responses; any future sync-completion notification mode would be explicit and capability-advertised. Graded by a runner hosting a webhook receiver during storyboard execution. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/webhook-emission.yaml) |
| `webhook-receiver-envelope` | Buyer webhook receivers MUST accept full MCP webhook envelopes, reject bare delivery-result payloads, preserve raw-body signature verification, and dedupe retries by a stable idempotency_key. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/webhook-receiver-envelope.yaml) |
| `wholesale-feed-bulk-webhooks` | Validates account-level notification_configs[] registration for agents that advertise wholesale_feed.bulk_change webhook events. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/wholesale-feed-bulk-webhooks.yaml) |
| `wholesale-feed-product-webhooks` | Validates account-level notification_configs[] registration for agents that advertise product wholesale feed webhook events. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/wholesale-feed-product-webhooks.yaml) |
| `wholesale-feed-products` | Validates get_products wholesale feed versioning: bootstrap responses carry wholesale_feed_version/cache_scope and matching if_wholesale_feed_version probes return unchanged without product rows. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/wholesale-feed-products.yaml) |
| `wholesale-feed-products-scope-isolation` | Validates that get_products conditional-fetch is keyed by cache_scope: a wholesale_feed_version minted under one cache_scope must not short-circuit (unchanged: true) a request the seller resolves to a different cache_scope. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/wholesale-feed-products-scope-isolation.yaml) |
| `wholesale-feed-signal-webhooks` | Validates account-level notification_configs[] registration for agents that advertise signal wholesale feed webhook events. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/wholesale-feed-signal-webhooks.yaml) |
| `wholesale-feed-signals` | Validates get_signals wholesale feed versioning: bootstrap responses carry wholesale_feed_version/cache_scope and matching if_wholesale_feed_version probes return unchanged without signal rows. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/wholesale-feed-signals.yaml) |
| `wholesale-feed-signals-scope-isolation` | Validates that get_signals conditional-fetch is keyed by cache_scope: a wholesale_feed_version minted under one cache_scope must not short-circuit (unchanged: true) a request the agent resolves to a different cache_scope. | [YAML](https://adcontextprotocol.org/compliance/latest/universal/wholesale-feed-signals-scope-isolation.yaml) |
